# AoC_2024

./: .bazelrc  .gitignore  Cargo.toml  MODULE.bazel  README.md  WORKSPACE
aocutils/: BUILD  Cargo.toml  README.md
aocutils/src/: lib.rs
day_01/: BUILD  Cargo.toml
day_01/inputs/: BUILD
day_01/src/: main.rs
day_02/: BUILD  Cargo.toml
day_02/src/: main.rs
day_03/: BUILD  Cargo.toml
day_03/src/: main.rs
day_04/: BUILD  Cargo.toml
day_04/src/: main.rs
day_05/: BUILD  Cargo.toml
